<resources>
    <string name="app_name">UTS</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="shr_app_name">Shrine</string>
    <string name="shr_hint_username">Username</string>
    <string name="shr_hint_password">Password</string>
    <string name="shr_button_next">Next</string>
    <string name="shr_button_cancel">Cancel</string>
    <string name="shr_error_password">Password must contain at least 8 characters.</string>
    <string name="shr_filter_title">Filter</string>
    <string name="shr_search_title">Search</string>
    <string name="shr_product_title">Title</string>
    <string name="shr_product_description">Secondary text</string>

    <!-- Shrine backdrop menu labels -->
    <string name="shr_featured_label">Featured</string>
    <string name="shr_apartment_label">Apartment</string>
    <string name="shr_accessories_label">Accessories</string>
    <string name="shr_shoes_label">Shoes</string>
    <string name="shr_tops_label">Tops</string>
    <string name="shr_bottoms_label">Bottoms</string>
    <string name="shr_dresses_label">Dresses</string>
    <string name="shr_account_label">My Account</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="jumlah">Jumlah</string>
    <string name="harga">Harga</string>
    <string name="keranjang_belanja">Keranjang Belanja</string>
    <string name="daftar_barang_di_keranjang_belanjaan_anda">Daftar barang di keranjang belanjaan Anda</string>
    <string name="total_rp_0_00">Total: RP 0.00</string>
    <string name="bayar">Bayar</string>
    <string name="tambah_produk">Tambah Produk</string>
    <string name="batalkan_pembayaran">Batalkan Pembayaran</string>
    <string name="konfirmasi_pembayaran">Konfirmasi Pembayaran</string>
    <string name="total_pembayaran_rp_0_00">Total Pembayaran: RP 0.00</string>
    <string name="detail_pembelian">Detail Pembelian</string>
    <string name="nama_pembeli">Nama Pembeli:</string>
    <string name="tanggal_pembelian">Tanggal Pembelian:</string>
    <string name="alamat_jl_merdeka_no_123">Alamat: Jl. Merdeka No.123</string>
    <string name="mie_rantau">Mie Rantau</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_background">login background</string>
    <string name="y">Mie Rantau</string>
    <string name="belum_punya_akun_daftar">Belum punya akun? Daftar</string>
    <string name="daftar_produk_yang_tersedia">Daftar produk yang tersedia</string>
    <string name="daftar_produk">Daftar produk</string>
    <string name="keranjang">Keranjang</string>
    <string name="terima_kasih_telah_berbelanja_dengan_kami">Terima kasih telah berbelanja dengan kami!</string>
    <string name="pesan_lagi">Pesan Lagi</string>
    <string name="rp_0_00">RP 0.00</string>

</resources>