<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/loginParent"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keranjang_belanja"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    <LinearLayout
        android:id="@+id/cartLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:contentDescription="@string/daftar_barang_di_keranjang_belanjaan_anda">
        <!-- Item keranjang ditambahkan di sini -->
    </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_rp_0_00"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>

    <Button
        android:backgroundTint="@color/colorAccent"
        android:id="@+id/payButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bayar"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp"/>
    <Button
        android:backgroundTint="@color/btnPrimary"
        android:id="@+id/tambahButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tambah_produk"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp"/>
</LinearLayout>
